[tool.poetry]
name = "repl_python3_SkyblockAPI"
version = "0.1.0"
description = ""
authors = ["SytzeReitsma <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord-webhook = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
